--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "path": "^0.12.7",
     "postgres": "^1.0.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
