--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "axios": "^0.21.1",
+    "chart.js": "^3.4.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.9",
     "path": "^0.12.7",
     "postgres": "^1.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
