--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.9",
     "path": "^0.12.7",
+    "pg": "^8.6.0",
     "postgres": "^1.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-overlay": "^2.0.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2"
   },
