--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
     "axios": "^0.21.1",
     "chart.js": "^3.4.1",
+    "core-js": "^3.15.2",
+    "dangerously-set-html-content": "^1.0.8",
     "express": "^4.17.1",
     "nodemon": "^2.0.9",
     "path": "^0.12.7",
@@ -21,10 +22,12 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-chartjs-2": "^3.0.3",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "babel-preset-react": "^6.24.1",
